# streaming-analytic-playground

./: .gitignore  LICENSE  README.md  docker-compose.infras.yaml  docker-compose.services.yaml  docker-compose.yaml  setup.sh
analytic_api/: Cargo.toml  Dockerfile  docker-compose.yml
analytic_api/src/: error.rs  handler.rs  job.rs  main.rs  pool.rs
be/: Cargo.toml  Dockerfile  docker-compose.yaml
be/migrations/: 0001_users.sql  0002_hist_champs.sql
be/src/: error.rs  main.rs  routes.rs  state.rs  utils.rs
be/src/handlers/: mod.rs  products_handler.rs  register_handler.rs
be/src/handlers/authentication/: mod.rs  signin_handler.rs  signup_handler.rs
be/src/handlers/boards/: boards_handler.rs  boards_reset_handler.rs  boards_submit_handler.rs  mod.rs
fe/: Dockerfile  README.md  docker-compose.yml  package-lock.json  package.json
fe/src/: App.vue  main.js
fe/src/router/: index.js
fe/src/views/: AboutView.vue  AuthSignInView.vue  AuthSignUpView.vue  BoardView.vue  ChartComponent.vue  FooterView.vue  HomeView.vue  LeaderboardComponent.vue  LeaderboardView.vue
flink/: .gitignore  Dockerfile  docker-compose.yaml  docker-compose.yml
kafka/: build.sh  docker-compose.yaml
kafka/images/base/: Dockerfile
kafka/images/base/config/: connect-distributed.properties  server.properties
kafka/images/connect/: Dockerfile
kafka/images/connect/config/: connect-distributed.properties
kafka/images/server/: Dockerfile
kafka/images/server/config/: server.properties
postgres/: docker-compose.yml
starrocks/: .gitignore  LICENSE  README.md  build_base.sh  docker-compose.yml
starrocks/image/base/: Dockerfile
starrocks/image/be/: Dockerfile.be
starrocks/image/cn/: Dockerfile.cn
starrocks/image/fe/: Dockerfile.fe
starrocks/jobs/: init.sql
ws/: Cargo.toml  Dockerfile  docker-compose.yml
ws/src/: main.rs
(+3 files in other folders)
