[package]
name = "be"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version= "1.38.0", features = ["full", "rt-multi-thread"]}
axum = {version="0.7", features = ["tracing", "macros", "tokio"]}
sqlx = {version = "0.7", features = ["postgres", "runtime-tokio", "chrono", "uuid"]}
serde = {version = "1", features = ["derive"]}
serde_json = "1"
uuid = {version = "1.8", features = ["v4"]}
rand = "0.8.5"
md5 = "0.7.0"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
tower-http = { version = "0.5.0", features = ["trace", "cors"] }
rdkafka = {version = "0.36.2"}
chrono = {version = "0.4", features = ["now", "std"]}