[package]
name = "ws"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = {version = "0.7", features = ["ws"]}
tokio = {version = "1", features = ["full"]}
serde = {version = "1.0.193", features = ["derive"]}
serde_json = "1.0.115"
rdkafka = "0.36.2"
chrono = {version = "0.4.*", features = ["now"]}
futures = "0.3"
